--- a/.github/workflows/checkBuild.yml
+++ b/.github/workflows/checkBuild.yml
@@ -62,10 +62,10 @@ jobs:
           exit 1
         fi
 
-    - name: Upload demo files
+    - name: Upload files
       uses: actions/upload-artifact@v4
       with:
-        name: demo-files-java-${{ matrix.java }}
+        name: files-java-${{ matrix.java }}
         path: ${{ env.PRIMARY_MAVEN_MODULE }}/target/${{ env.PRIMARY_MAVEN_MODULE }}-*.jar
         if-no-files-found: error
 
