--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,7 +99,7 @@ jobs:
           ## Installation
           Download the javaagent from the assets section below and attach it to your java application.
 
-  publish_central: # Publish the code to central
+  publish_assets:
     runs-on: ubuntu-latest
     needs: [prepare_release]
     steps:
@@ -158,7 +158,7 @@ jobs:
 
   after_release:
     runs-on: ubuntu-latest
-    needs: [publish_central]
+    needs: [publish_assets]
     steps:
     - uses: actions/checkout@v4
       
