--- a/renovate.json5
+++ b/renovate.json5
@@ -4,7 +4,7 @@
   "packageRules": [
     {
       "description": "Ignore project internal dependencies",
-      "packagePattern": "^software.xdev:template-placeholder",
+      "packagePattern": "^software.xdev:thread-origin-agent",
       "datasources": [
         "maven"
       ],
