--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,7 +99,7 @@ jobs:
           ## Installation
           Download the javaagent from the assets section below and [attach it to your java application](https://github.com/xdev-software/thread-origin-agent#usage).
 
-  publish_assets:
+  publish-assets:
     runs-on: ubuntu-latest
     needs: [prepare-release]
     steps:
@@ -158,7 +158,7 @@ jobs:
 
   after-release:
     runs-on: ubuntu-latest
-    needs: [publish_assets]
+    needs: [publish-assets]
     steps:
     - uses: actions/checkout@v4
       
